--- a/style.css
+++ b/style.css
@@ -1,7 +1,44 @@
 @charset "utf-8";
 
+.imageomap .map {
+    margin-bottom:8px;
+}
+
+.imageomap .thumbnail {
+    float: left;
+}
+
+.imageomap .thumbnail img {
+    width: 128px;
+    border: 4px solid #FFF;
+    box-shadow: 0 1px 2px #444;
+}
+
+.imageomap .info {
+    overflow: hidden;
+    padding-left: 8px;
+}
+
+.imageomap .title {
+    font-weight: bold;
+    text-align:left;
+    float:left;
+}
+
+.imageomap .datetime {
+    background:none; font-size:0.8em;
+    text-align: right;
+}
+
+.imageomap .clear {
+    clear:both;
+}
+
+/*
 #imageomap fieldset       { border-style: solid; border-width: 1px; border-color: #aaaaaa; margin:0em 2em 0em 0em; padding:1em; }
 #imageomap legend         { font-weight:bold; font-size:120%; }
+
+.imageomap { width:640px; }
 
 .imageomap .map           { margin-bottom:8px; }
 .imageomap td             { border:none; margin:0; padding:0; vertical-align:top; }
@@ -19,3 +56,4 @@
 .imageomap .tooltip td,
 .imageomap .tooltip th    { border:none; background:none transparent; margin:0px; padding:0px; }
 .imageomap .tooltip th    { text-align:right; padding-right:4px; }
+*/
