--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 .imageomap .thumbnail img {
     width: 128px;
     border: 4px solid #FFF;
+    background: #bdc3c7 none;
     box-shadow: 0 1px 2px #444;
 }
 
